[tool.poetry]
name = "visualizations-demo"
version = "0.1.0"
description = "Demo of how to combine visualizations for impact"
authors = ["Rob Elliott <ree@purdue.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^2.4.1"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
statsmodels = "^0.14.0"
# Required for the notebook to actually run in VS Code
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"